Corrected color scheme after checking contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@
 
 /* Portfolio */
 .card {
-  background-color: #44475a;
+  background-color: #282a36;
   border: #bd93f9 solid 2px;
   color: #f8f8f2;
   height: 100%;
@@ -110,12 +110,12 @@ li {
   text-align: left;
 }
 body {
-  background: #282a36;
+  background-color: #44475a;
   color: #f8f8f2;
 }
 section {
   overflow: auto;
-  background-color: #44475a;
+  background: #282a36;
   text-align: left;
   border: 2px solid #bd93f9;
   -webkit-box-shadow: 0px 0px 40px -10px rgba(0, 0, 0, 1);
